--- a/ftc_app-master/FtcRobotController/build.gradle
+++ b/ftc_app-master/FtcRobotController/build.gradle
@@ -22,7 +22,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.0'
+        classpath 'com.android.tools.build:gradle:2.1.3'
     }
 }
 
@@ -48,4 +48,5 @@ dependencies {
     compile(name: 'ModernRobotics-release', ext: 'aar')
     compile(name: 'Analytics-release', ext: 'aar')
     compile(name: 'WirelessP2p-release', ext: 'aar')
+    compile files('libs/Vuforia.jar')
 }
