--- a/ftc_app-master/FtcRobotController/src/main/AndroidManifest.xml
+++ b/ftc_app-master/FtcRobotController/src/main/AndroidManifest.xml
@@ -32,6 +32,8 @@
   <uses-permission
     android:name="android.permission.WRITE_SETTINGS"
     android:required="true" />
+  <uses-permission android:name="android.permission.CAMERA"
+      android:required="true" />
 
   <uses-feature android:name="android.hardware.usb.accessory" />
 
